examples/test/testpolicy16041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16041
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key49: value48
      key7: value17
      key12: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value2
      podSelector:
        matchLabels:
          key2: value6
